--- a/server/index.html
+++ b/server/index.html
@@ -2,22 +2,25 @@
 <html>
 
 <head>
-	<title>Socket.IO chat</title>
+  <title>Socket.IO chat</title>
 </head>
 
 <body>
-	<ul id="updates"></ul>
-	<script src="/socket.io/socket.io.js"></script>
-	<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
-	<script>
-		$(function () {
-			var socket = io();
+<ul id="updates"></ul>
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script>
+  $(function () {
+    var socket = io();
 
-			socket.on('market', function (marketUpdate) {
-				$('#updates').append($('<li>').text('Open: ' + marketUpdate.open + ", Close: "+ marketUpdate.close + " on " + marketUpdate.date));
-			});
-		});
-	</script>
+    socket.on('market', function (marketUpdate) {
+      $('#updates').append($('<li>').text(
+        'Open: ' + marketUpdate.open +
+        ', Close: ' + marketUpdate.close +
+        ' on ' + marketUpdate.date));
+    });
+  });
+</script>
 </body>
 
 </html>
