Upgraded to Angular 6

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,31 +1,14 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <title>MarketSample</title>
+  <title>AngularD3Chart</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-    .axis path,
-    .axis line {
-      fill: none;
-      stroke: #000;
-      shape-rendering: crispEdges;
-    }
-
-    .line {
-      fill: none;
-      stroke: #000;
-      stroke-width: 1.5px;
-    }
-  </style>
 </head>
-
 <body>
   <app-root></app-root>
 </body>
-
 </html>
